# nanotrace

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  TOBE.md  docker-compose.dev.yml  package-lock.json  package.json  plan.md
.github/workflows/: publish-image.yml  publish-sdk.yml
.pulumi-docker/: .token_seed  config.json
.pulumi-docker/buildx/: .buildNodeID
.pulumi-docker/buildx/activity/: default
apps/alerts/: Cargo.toml
apps/alerts/src/: main.rs
apps/loader/: Cargo.toml  README.md
apps/loader/src/: main.rs
apps/normalizer/: Cargo.toml
apps/normalizer/src/: main.rs
apps/query/: Cargo.toml
apps/query/src/: config.rs  main.rs  read.rs
apps/server/: Cargo.toml  README.md
apps/server/src/: config.rs  dashboards.rs  definitions.rs  deletions.rs  event.rs  event_log.rs  facets.rs  http.rs  main.rs  materializations.rs  metrics.rs  openapi.rs  processors.rs  read.rs  reports.rs  retention.rs  uploader.rs
apps/sidecar/: Cargo.toml  Dockerfile  README.md
apps/sidecar/src/: main.rs
apps/ui/: package.json  tsconfig.json  vite.config.ts
apps/ui/src/: global.d.ts  main.tsx  routeTree.gen.ts  router.tsx  styles.css
crates/auth/: Cargo.toml
crates/auth/migrations/: 20260607000100_auth_control_plane.sql  20260607000200_account_lifecycle_audit.sql  20260607000300_oauth_states.sql  20260609000100_projects.sql  20260609000200_default_project_trigger.sql
crates/auth/src/: lib.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: lib.rs
crates/lakehouse/: Cargo.toml
crates/lakehouse/src/: lib.rs
crates/processor-runtime/: Cargo.toml
crates/processor-runtime/src/: lib.rs
crates/read/: Cargo.toml
crates/read/src/: lib.rs
deploy/clickhouse/: README.md  schema.sql
deploy/pulumi/nanotrace/: Pulumi.yaml  index.ts  tsconfig.json
docs/: current-architecture.html  data-plane-provisioning.md  database-observability-research-review.md  deployment-architecture.html  design.html  eng-spec.md  engineering-spec.md  event-fixture-formats.md  facet-correlation-scaling.html  iceberg-final-spec.md  invariants.md  loadtest-results.md  materialization-definition-plan.md  platform-model.md  query-index-evolution-review.md  server-systems-diagram.html  tenant-route-inventory.md  usecase.html  usecase.md
docs/database-observability-research/: README.md  analytical-dbms-formats-vldb-journal-2025.md  clickhouse-high-cardinality-2026.md  clickhouse-json-2024-2025.md  clickhouse-pvldb-2024.md  cloud-object-storage-analytics-pvldb-2023.md  cloudflare-clickhouse-log-analytics.md  datadog-husky-compaction.md  datadog-husky-event-store.md  datadog-husky-ingestion-multitenancy.md  datadog-husky-query-engine.md  delta-lake-pvldb-2020.md  dremel-vldb-2010-and-decade.md  druid-sigmod-2014.md  gitlab-lago-clickhouse-business-analytics.md  google-observability-query-language-2024.md  gorilla-pvldb-2015.md  honeycomb-wide-events-and-sampling.md  iceberg-row-level-ops-pvldb-2024.md  json-tiles-sigmod-2021.md  kafka-to-iceberg-streaming.md  lakehouse-comparison-cidr-2023.md  logstore-sigmod-2021.md  mach-cidr-2022.md  monarch-pvldb-2020.md  napa-pvldb-2023.md  observation-lakehouses-2025.md  opentelemetry-semantic-conventions.md  pinot-sigmod-2018.md  procella-pvldb-2019.md  samsara-operational-signals.md  schemaless-lsm-columnar-pvldb-2022.md  sentry-snuba-clickhouse.md  snowflake-sigmod-2016.md  uber-pinot-operational-analytics.md
fixtures/events/: agent_decision.json  agent_request.json  eval_score.json  llm_call.json  log.json  log_variation_code_success.json  log_variation_excalidraw.json  log_variation_image_gen.json  materializer_backfill_slice.json  materializer_report_materialized.json  metric.json  metric_counter.json  metric_gauge.json  metric_histogram.json  metric_runtime.json  processor_backfill_slice.json  processor_report_materialized.json  product_checkout_completed.json  product_order_filled.json  retrieval_step.json  safety_event.json  span_end.json  span_start.json  state_account_plan_changed.json  state_account_risk_tier_changed.json  tool_call.json
processors/: drop_llm_messages_loader.rs
scripts/: apply-clickhouse-schema.mjs  backfill-clickhouse-facets.mjs  backfill-events-http.mjs  benchmark-clickhouse-dense-groups.mjs  bootstrap-maximal-events-pack.mjs  clickhouse-cloud-service.mjs  deploy-roll-pulumi.mjs  deploy-ui.mjs  e2e-pulumi.mjs  generate-llm-loadtest-events.mjs  generate_log_variations.cjs  materialization-loadtest.mjs  modal_loadtest.py  modal_processor_builder.py  provision-data-plane.mjs  pulumi-nanotrace.mjs  register-drop-llm-messages-processor.mjs  scale-pulumi-asg.mjs  seed-dev-auth.mjs
scripts/dev/: localstack-init.sh
skills/bootstrap/: SKILL.md
skills/bootstrap-dashboards/: SKILL.md
skills/bootstrap-dashboards/references/: discovery-workflow.md  output-format.md  visualization-grammar.md
skills/bootstrap/agents/: openai.yaml
skills/create-visualization/: SKILL.md
skills/high-cardinality-aggregation/: SKILL.md
skills/nanotrace-alert-rollup-promotion/: SKILL.md
skills/nanotrace-cohort-retention-promotion/: SKILL.md
skills/nanotrace-deployment-lifecycle/: SKILL.md
skills/nanotrace-deployment-lifecycle/agents/: openai.yaml
skills/nanotrace-field-facet-promotion/: SKILL.md
skills/nanotrace-field-lookup-promotion/: SKILL.md
skills/nanotrace-measure-promotion/: SKILL.md
skills/nanotrace-measure-rollup-promotion/: SKILL.md
skills/nanotrace-promotion-boundary/: SKILL.md
skills/nanotrace-promotion-classifier/: SKILL.md
skills/nanotrace-query-optimization-observer/: SKILL.md
skills/nanotrace-report-promotion/: SKILL.md
skills/nanotrace-sequence-funnel-promotion/: SKILL.md
skills/nanotrace-state-promotion/: SKILL.md
skills/nanotrace-topn-entity-promotion/: SKILL.md
skills/nanotrace-trace-summary-promotion/: SKILL.md
skills/ship/: SKILL.md
skills/ship/agents/: openai.yaml
tests/integration/: kafka-e2e.mjs
tools/lakehouse-rebuild/: Cargo.toml
tools/lakehouse-rebuild/src/: main.rs
tools/loadtest/: Cargo.toml
tools/loadtest/src/: main.rs
(+29 files in other folders)
