[package]
name = "nanotrace-alerts"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
nanotrace-ingest = { path = "../../crates/ingest" }
rdkafka = { version = "0.37", features = ["cmake-build", "ssl-vendored", "zstd"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
