[package]
name = "nanotrace-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-sesv2 = "1"
axum = "0.8"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
nanotrace-auth = { path = "../../crates/auth" }
nanotrace-ingest = { path = "../../crates/ingest" }
nanotrace-read = { path = "../../crates/read" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
sha2 = "0.10"
sqlparser = { version = "0.62", features = ["visitor"] }
sqlx = { version = "0.8", default-features = false, features = ["chrono", "postgres", "runtime-tokio-rustls"] }
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.6", features = ["cors", "fs", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
utoipa = { version = "5.5", features = ["chrono", "preserve_order"] }
