[package]
name = "nanotrace-auth"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
http = "1"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["chrono", "derive", "json", "macros", "migrate", "postgres", "runtime-tokio-rustls"] }
thiserror = "2"
tokio = { version = "1", features = ["rt", "time"] }
tracing = "0.1"
