[package]
name = "nanotrace-ingest"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
rdkafka = { version = "0.37", features = ["cmake-build", "ssl-vendored", "zstd"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
