[package]
name = "nanotrace-processor-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
aws-sdk-s3 = "1"
hex = "0.4"
libloading = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["fs", "sync", "time"] }
tracing = "0.1"
